fix ul whitespace

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -35,6 +35,7 @@ button {
 
 ul {
     list-style-type: none;
+    padding: 0;
 }
 
 li {
